<resources>
    <string name="app_name">LeaderBoard</string>
    <string name="leaderboard">LEADERBORD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="yes_button">Yes button</string>
    <string name="yes">Yes</string>
    <string name="leader_badge">Leader Badge</string>
    <string name="error_icon">Error icon</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="success_icon">Success icon</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="gad_icon">GAD icon</string>
    <string name="project_submission">Project Submission</string>
    <string name="fist_name">Fist Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_link">Project on GITHUB (link)</string>
    <string name="submit">Submit</string>
    <string name="horizontal_line">horizontal line</string>
    <string name="fields_required">All fields are required</string>
    <string name="question_mark">Question mark</string>
    <string name="failed">Failed</string>
    <string name="cancel_dialog_box">Cancel dialog box</string>
</resources>